--- a/src/views/XetNghiemManagerFrame/ThemMoiXetNghiem.form
+++ b/src/views/XetNghiemManagerFrame/ThemMoiXetNghiem.form
@@ -94,8 +94,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -159,9 +158,7 @@
                       <Component id="jLabel14" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="ketquaxetnghiem" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel10" min="-2" pref="30" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="cancelBtn" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="acceptBtn" min="-2" max="-2" attributes="0"/>
@@ -369,17 +366,6 @@
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="hinhthucxetnghiem.setFont(new java.awt.Font(&quot;Arial&quot;, 0, 14));&#xa;hinhthucxetnghiem.setBackground(Color.WHITE);"/>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel10">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Arial" size="14" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="ff" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="(*)"/>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
